--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.thunsaker.rapido.android"
+    package="com.thunsaker.rapido"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="@string/app_version_number">
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
     
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:icon="@drawable/ic_launcher"
@@ -25,9 +26,11 @@
         <activity
             android:name=".TwitterAuthorizationActivity"
             android:label="@string/title_activity_twitter">
+            <!-- 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
+            -->
         </activity>
         <activity android:name=".Preferences" />
     </application>
