--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thunsaker.rapido"
-    android:versionCode="1"
+    android:versionCode="2"
     android:versionName="@string/app_version_number">
 
     <uses-sdk
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Styled">
         <activity
-            android:name=".MainActivity"
+            android:name="com.thunsaker.rapido.MainActivity"
             android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
         </activity>
         
         <activity
-            android:name=".TwitterAuthorizationActivity"
+            android:name="com.thunsaker.rapido.TwitterAuthorizationActivity"
             android:label="@string/title_activity_twitter">
             <!-- 
             <intent-filter>
@@ -32,6 +32,6 @@
             </intent-filter>
             -->
         </activity>
-        <activity android:name=".Preferences" />
+        <activity android:name="com.thunsaker.rapido.Preferences" />
     </application>
 </manifest>
