--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-
-src/com/thunsaker/rapido/FacebookAuthenticationHelper.java
-
-src/com/thunsaker/rapido/FacebookAuthenticationHelper.java
+src/com/thunsaker/rapido/AuthHelper.java
+gen
