--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.thunsaker.rapido"
-    android:versionCode="3"
+    android:versionCode="4"
     android:versionName="@string/app_version_number">
 
     <uses-sdk
@@ -9,11 +9,13 @@
     
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Styled">
+        android:theme="@style/Theme.Styled"
+        android:hardwareAccelerated="true">
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main">
@@ -34,6 +36,6 @@
         <activity 
             android:name=".BitlyAuthorizationActivity"
             android:label="@string/title_activity_bitly" />
-        <activity android:name=".Preferences" />
+        <activity android:name=".PreferencesActivity" />
     </application>
 </manifest>
