--- a/rapido/src/main/AndroidManifest.xml
+++ b/rapido/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.thunsaker.rapido"
-    android:versionCode="17"
-    android:versionName="1.8.6.2" >
+    package="com.thunsaker.rapido">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -123,7 +121,7 @@
 
         <meta-data
             android:name="com.crashlytics.ApiKey"
-            android:value="@string/crashlytics_key"/>
+            android:value="8082d72aba9bada195402df55120e01f41d6e03b" />
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
