Added my common dagger library/classes

--- a/rapido/build.gradle
+++ b/rapido/build.gradle
@@ -69,6 +69,7 @@ android {
 }
 
 dependencies {
+    compile project(':zapato') // my common classes
     compile project(':foursquareoauthlibrary')
     compile ('com.facebook:facebook-android-sdk:+@aar') {
         transitive = true
@@ -82,7 +83,7 @@ dependencies {
 
     compile files('libs/dashclock-api-r1.1.jar')
     compile 'com.google.api-client:google-api-client:1.18.0-rc'
-    compile 'com.google.http-client:google-http-client:1.18.0-rc'
+//    compile 'com.google.http-client:google-http-client:1.18.0-rc'
     compile 'com.google.oauth-client:google-oauth-client:1.18.0-rc'
     compile 'com.twitter:twitter-text:1.9.0'
     compile 'org.twitter4j:twitter4j-core:4.0.1'
