--- a/rapido/build.gradle
+++ b/rapido/build.gradle
@@ -66,10 +66,18 @@ android {
             signingConfig signingConfigs.releaseSigning
         }
     }
+
+//    sourceSets {
+//        main {
+//            manifest.srcFile '../foursquare-android-oauth/foursquare-oauth-library/src/main/AndroidManifest.xml'
+//            java.srcDirs = ['../foursquare-android-oauth/foursquare-oauth-library/src/']
+//            res.srcDirs = ['../foursquare-android-oauth/foursquare-oauth-library/src/main/res']
+//        }
+//    }
 }
 
 dependencies {
-    compile project(':foursquareoauthlibrary')
+    compile project (':foursquare-android-oauth:foursquare-oauth-library')
     compile ('com.facebook:facebook-android-sdk:+@aar') {
         transitive = true
     }
