--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'org.robolectric:robolectric-gradle-plugin:0.12.0'
     }
 }
 
@@ -15,8 +16,4 @@ allprojects {
             url "http://mente.github.io/facebook-api-android-aar"
         }
     }
-
-//    tasks.withType(Compile) {
-//        options.compilerArgs << "-Xlint:deprecation"
-//    }
 }
