--- a/rapido/build.gradle
+++ b/rapido/build.gradle
@@ -1,3 +1,21 @@
+gradle.taskGraph.whenReady { taskGraph ->
+    if(taskGraph.hasTask(':app:assembleRelease')) {
+        // Only execute when we are trying to assemble a release build
+        def pass = System.console() != null ? System.console().readPassword("\nPlease enter store passphrase: ") : ""
+        // readPassword returns a char[] so we need to wrap it into a string, because that's
+        // most likely what you need
+        pass = new String(pass)
+        // Use the pass variable here (so set signing configs here)
+        android.signingConfigs.release.storePassword = pass
+
+        def pass2 = System.console() != null ? System.console().readPassword("\nPlease enter key passphrase: ") : ""
+        // readPassword returns a char[] so we need to wrap it into a string, because that's
+        // most likely what you need
+        pass2 = new String(pass2)
+        android.signingConfigs.release.keyPassword = pass2
+    }
+}
+
 buildscript {
     repositories {
         mavenCentral()
@@ -12,6 +30,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'robolectric'
 apply plugin: 'crashlytics'
 
 repositories {
@@ -29,6 +48,7 @@ android {
         targetSdkVersion 19
         versionCode 17
         versionName "1.9"
+        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
     }
 
     signingConfigs {
@@ -42,9 +62,9 @@ android {
 
         releaseSigning {
             storeFile file(RELEASE_STORE_FILE)
-            storePassword System.console() != null ? new String(System.console().readPassword("\nStore password: ")) : ""
+            storePassword ""
             keyAlias RELEASE_KEY_ALIAS
-            keyPassword System.console() != null ? new String(System.console().readPassword("\nKey password: ")) : ""
+            keyPassword ""
         }
     }
 
@@ -66,6 +86,22 @@ android {
             signingConfig signingConfigs.releaseSigning
         }
     }
+    sourceSets {
+        main {
+            manifest.srcFile 'src/main/AndroidManifest.xml'
+            java.srcDirs = ['src/main/java']
+            res.srcDirs = ['src/main/res']
+        }
+
+        androidTest {
+            setRoot('src/androidTest')
+        }
+    }
+}
+
+robolectric {
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
 }
 
 dependencies {
@@ -77,8 +113,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.google.android.gms:play-services:5.0.77'
     compile 'com.crashlytics.android:crashlytics:1.1.11'
-    compile 'com.android.support:support-v4:19.+'
-    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:appcompat-v7:19.1.0'
 
     compile files('libs/dashclock-api-r1.1.jar')
     compile 'com.google.api-client:google-api-client:1.18.0-rc'
@@ -89,4 +124,38 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.0.0'
     compile 'de.greenrobot:eventbus:2.2.0'
     compile 'com.squareup.dagger:dagger:1.2.1'
+
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+
+    androidTestCompile('junit:junit:4.11') {
+        exclude module: 'hamcrest-core'
+    }
+    androidTestCompile('org.robolectric:robolectric:2.3') {
+        exclude module: 'classworlds'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-plugin-registry'
+        exclude module: 'maven-profile'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'nekohtml'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-http-shared'
+        exclude module: 'wagon-provider-api'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+    }
+    androidTestCompile 'com.squareup:fest-android:1.0.7'
+    androidTestCompile('com.jakewharton.espresso:espresso:1.1-r3') {
+        exclude module: 'javax.inject'
+        exclude module: 'javax.annotation:javax.annotation-api:1.2'
+        exclude module: 'httpclient'
+    }
+    androidTestCompile 'com.jakewharton.espresso:espresso-support-v4:1.1-r3'
 }
