I got robolectric tests working!!!

--- a/rapido/src/main/AndroidManifest.xml
+++ b/rapido/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:required="true" />
 
     <application
+        android:name=".app.RapidoApp"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
