--- a/rapido/build.gradle
+++ b/rapido/build.gradle
@@ -16,6 +16,19 @@ gradle.taskGraph.whenReady { taskGraph ->
     }
 }
 
+// NOTE: Temp fix for Play Services (admob) from: https://code.google.com/p/android/issues/detail?id=75080
+tasks.whenTaskAdded { theTask ->
+    def taskName = theTask.name.toString()
+    if ("testDebug".toString().equals(taskName)) {
+        /**
+         * Listen for when robolectric adds the 'testDebug' task and when it does, add the -noverify
+         * option to that task's jvmArgs.  This allows us to turn off byte code verification when
+         * running our unit tests.
+         */
+        theTask.jvmArgs('-noverify')
+    }
+}
+
 buildscript {
     repositories {
         mavenCentral()
@@ -24,7 +37,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.11.4'
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.12.0'
 
     }
 }
@@ -105,31 +118,26 @@ robolectric {
 }
 
 dependencies {
-    compile project (':foursquare-android-oauth:foursquare-oauth-library')
-    compile ('com.facebook:facebook-android-sdk:+@aar') {
+    androidTestCompile('junit:junit:4.11') {
+        exclude module: 'hamcrest-core'
+    }
+    compile project(':foursquare-android-oauth:foursquare-oauth-library')
+    compile('com.facebook:facebook-android-sdk:+@aar') {
         transitive = true
     }
-
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.android.gms:play-services:5.0.77'
-    compile 'com.crashlytics.android:crashlytics:1.1.11'
+    compile 'com.crashlytics.android:crashlytics:1.1.13'
     compile 'com.android.support:appcompat-v7:19.1.0'
-
     compile files('libs/dashclock-api-r1.1.jar')
     compile 'com.google.api-client:google-api-client:1.18.0-rc'
     compile 'com.google.oauth-client:google-oauth-client:1.18.0-rc'
     compile 'com.twitter:twitter-text:1.9.0'
     compile 'org.twitter4j:twitter4j-core:4.0.1'
-
     compile 'com.jakewharton:butterknife:5.0.0'
     compile 'de.greenrobot:eventbus:2.2.0'
     compile 'com.squareup.dagger:dagger:1.2.1'
-
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
-
-    androidTestCompile('junit:junit:4.11') {
-        exclude module: 'hamcrest-core'
-    }
     androidTestCompile('org.robolectric:robolectric:2.3') {
         exclude module: 'classworlds'
         exclude module: 'maven-artifact'
@@ -155,7 +163,6 @@ dependencies {
     androidTestCompile('com.jakewharton.espresso:espresso:1.1-r3') {
         exclude module: 'javax.inject'
         exclude module: 'javax.annotation:javax.annotation-api:1.2'
-        exclude module: 'httpclient'
     }
     androidTestCompile 'com.jakewharton.espresso:espresso-support-v4:1.1-r3'
 }
