--- a/rapido/build.gradle
+++ b/rapido/build.gradle
@@ -126,7 +126,7 @@ dependencies {
         transitive = true
     }
     compile 'com.google.code.gson:gson:2.3'
-    compile 'com.google.android.gms:play-services:5.0.77'
+    compile 'com.google.android.gms:play-services:5.0.+'
     compile 'com.crashlytics.android:crashlytics:1.1.13'
     compile 'com.android.support:appcompat-v7:19.1.0'
     compile files('libs/dashclock-api-r1.1.jar')
